--- a/wp-content/themes/trivedaa/css/style.css
+++ b/wp-content/themes/trivedaa/css/style.css
@@ -136,6 +136,7 @@ textarea {
 }
 input[type="password"]:focus,
 input[type="email"]:focus,
+input[type="tel"]:focus,
 input[type="text"]:focus,
 input[type="file"]:focus,
 input[type="radio"]:focus,
@@ -145,6 +146,7 @@ textarea:focus {
 }
 input[type="password"],
 input[type="email"],
+input[type="tel"],
 input[type="text"],
 input[type="file"],
 textarea {
@@ -535,7 +537,7 @@ blockquote cite:before {
     color: #FFF;
 }
 .navbar .navbar-nav li.menu-item a {
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 300;
     letter-spacing: 4px;
     text-transform: uppercase;
@@ -659,7 +661,7 @@ blockquote cite:before {
 }
 .logo-img {
     padding: 20px 0;
-    width: 125px;
+    width: 200px;
     text-align: center;
 }
 .dropdown .nav-link i {
@@ -667,7 +669,7 @@ blockquote cite:before {
     font-size: 8px;
     color: rgba(255, 255, 255, 0.5);
 }
-.navbar .dropdown-menu .dropdown-item {
+.navbar .sub-menu li.menu-item a{
     padding: 6px 0;
     font-family: 'Didact Gothic', sans-serif;
     font-size: 15px;
@@ -678,7 +680,7 @@ blockquote cite:before {
     transition: all .4s;
     background-color: transparent;
 }
-.navbar .dropdown-menu .dropdown-item span {
+.navbar .sub-menu .dropdown-item span {
     display: block;
     cursor: pointer;
 }
@@ -689,28 +691,28 @@ blockquote cite:before {
     font-size: 8px;
     float: right;
 }
-.navbar .dropdown-menu .dropdown:hover > .dropdown-item,
-.navbar .dropdown-menu .dropdown-item.active,
-.navbar .dropdown-menu .dropdown-item:hover {
+.navbar .sub-menu .dropdown:hover > li.menu-item a,
+.navbar .sub-menu li.menu-item a.active,
+.navbar .sub-menu li.menu-item a:hover {
     color: #b19777;
 }
 .navbar .dropdown-toggle::after {
     display: none;
 }
-.navbar .dropdown-menu li {
+.navbar .sub-menu li {
    border-bottom: 1px solid rgba(255, 255, 255, 0.02);
 }
-.navbar .dropdown-menu li:last-child {
+.navbar .sub-menu li:last-child {
    border-bottom: none;
 }
-.navbar .dropdown-menu .dropdown-menu.pull-left {
+.navbar .sub-menu .dropdown-menu.pull-left {
     top: 0;
     left: auto;
     right: 100%;
 }
 /* Navbar Media Query */
 @media screen and (min-width: 992px) {
-    .navbar .dropdown-menu {
+    .navbar .sub-menu {
         display: block;
         opacity: 0;
         visibility: hidden;
@@ -724,7 +726,7 @@ blockquote cite:before {
         -webkit-transition: all .3s;
         transition: all .3s;
     }
-    .navbar .dropdown-menu .dropdown-menu {
+    .navbar .sub-menu .dropdown-menu {
         left: calc(100% + 5px);
         top: -10px;
         right: auto;
@@ -802,12 +804,12 @@ blockquote cite:before {
     .nav-scroll .navbar-collapse .active {
         color: #b19777 !important;
     }   
-    .navbar .dropdown-menu .dropdown-item {
+    .navbar .sub-menu li.menu-item a {
         padding: 0 15px;
         font-size: 15px;
         line-height: 40px;
     }
-    .navbar .dropdown-menu .dropdown-item.dropdown-toggle {
+    .navbar .sub-menu .dropdown-item.dropdown-toggle {
         font-weight: 500;
     }
     .navbar .dropdown-submenu .dropdown-toggle::after {
@@ -820,7 +822,7 @@ blockquote cite:before {
     .navbar .dropdown-submenu .dropdown-toggle.show::after {
         transform: rotate(90deg);
     }
-    .navbar .dropdown-menu {
+    .navbar .sub-menu {
         border: none;
         padding: 0;
         border-radius: 0;
@@ -831,7 +833,7 @@ blockquote cite:before {
         margin: 0;
         padding: 0 0 0 20px;
     }
-    .navbar .dropdown-menu li a {
+    .navbar .sub-menu li a {
         padding: 0 15px;
     }
     .navbar .navbar-nav li.menu-item a {
