--- a/wp-content/themes/trivedaa/style.css
+++ b/wp-content/themes/trivedaa/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Trivedaa
-Theme URI: https://www.nirmalvasundhara.com/
+Theme URI: https://www.trivedaa.com/
 Description: A custom theme made by Easternts Techno soluation I.
 Author: ETS I
 Author URI: https://easternts.com.au
