--- a/wp-content/themes/trivedaa/css/custom-css.css
+++ b/wp-content/themes/trivedaa/css/custom-css.css
@@ -4,9 +4,9 @@
 
 /* Emi css */
 .emi-calculator-container {
-    max-width: 1000px;
+    max-width: 1110px;
     margin: 0 auto;
-    background-color: #f8f9fa;
+    background-color: #0c0c0c;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -28,7 +28,7 @@
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
-    color: #555;
+    color: #fff;
 }
 .form-control {
     width: 100%;
@@ -71,7 +71,7 @@
     text-align: center;
     margin-top: 20px;
     font-size: 20px;
-    color: #333;
+    color: #fff;
 }
 .emi-chart-and-table {
     display: flex;
@@ -95,10 +95,10 @@
     border: 1px solid #ddd;
     text-align: left;
     font-size: 16px;
-    color: #555;
+    color: #fff;
 }
 .emi-details-table th {
-    background-color: #f1f1f1;
+    background-color: #0c0c0c;
     font-weight: bold;
 }
 canvas {
@@ -127,7 +127,7 @@ canvas {
 
 .accordion {
     width: 100%;
-    max-width: 800px;
+    /* max-width: 800px; */
     margin: 0 auto;
 }
 
@@ -137,10 +137,11 @@ canvas {
 }
 
 .accordion .accordion-header {
-    background: #f1f1f1;
+    background: #0c0c0c;
     padding: 10px;
     cursor: pointer;
     font-weight: bold;
+    color: #fff;
 }
 
 .accordion .accordion-content {
