--- a/wp-content/themes/trivedaa/css/style.css
+++ b/wp-content/themes/trivedaa/css/style.css
@@ -475,7 +475,7 @@ blockquote cite:before {
 }
 .lines{
     position: relative;
-    z-index: 0;
+    z-index: -1;
 }
 /* ======= Section style ======= */
 .section-padding.triveda {
@@ -520,6 +520,8 @@ blockquote cite:before {
     letter-spacing: 3px;
     text-transform: uppercase;
 }
+
+
 
 /* ======= Navbar style ======= */
 .navbar {
@@ -1051,6 +1053,8 @@ hr {
     }
 }
 
+
+
 /* ======= Slider Grid Background ======= */
 .slider-grid-bg {
     min-height: 100vh;
@@ -1190,6 +1194,8 @@ hr {
     }
 }
 
+
+
 /* ===== Kenburns Slider style ===== */
 .kenburns-section {
   z-index: 1;
@@ -1243,6 +1249,7 @@ hr {
     font-weight: 400;
     letter-spacing: 10px;
 }
+#trivedaaSlider .vegas-overlay {}
 @media screen and (max-width: 767px) {
 .kenburns-inner .caption h4 {
     font-size: 12px;
@@ -5306,7 +5313,30 @@ hr.border-2 {
     width: 400px;
 }
 
-
+.project-section-1{
+    position: absolute;
+    top:5%;   
+    width: 30%;         
+}
+.project-section-title{
+    font-size: 52px;
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    color: #000;
+    line-height: 56px;
+    text-transform: uppercase;
+    position: relative;
+    letter-spacing: 4px;
+    word-spacing: 5px;
+    margin-top: 30px;
+}
+.logo-name-1 img{
+    width: 160px;
+    height: auto;
+}
+.logo-name-1{    
+    margin-top: 60px;
+}
 .about-hero-image-wrapper {
     grid-column-gap: 30px;
     align-items: center;
@@ -5321,4 +5351,44 @@ hr.border-2 {
 }
 .text-section h1{
     font-size: 90px;
+}
+.mt-180{
+    margin-top: 180px;
+}
+.mt-120{
+    margin-top: 120px;
+}
+.mb-100{
+    margin-bottom: 100px;
+}
+.rize-details{
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+}
+.t-1{
+    font-size: 18px;    
+    font-weight: 400;
+    color: #272727;        
+    position: relative;
+    letter-spacing: 1px;
+    word-spacing: 5px;
+}
+.t-img img {
+width: 30px;
+margin-right: 10px;
+}
+.rize-section{
+    background-color: #FFF;
+     z-index: 2;
+    position: relative;
+    padding-top: 60px;
+    background-image: url(../img/footer-bg2.svg);
+    background-attachment: fixed;
+    background-size: 50%;
+	background-position:right center;
+    background-repeat: no-repeat 
+}
+.rize-project-img {
+width: 46%;
 }
