--- a/wp-content/themes/trivedaa/css/custom-css.css
+++ b/wp-content/themes/trivedaa/css/custom-css.css
@@ -167,10 +167,17 @@ canvas {
 .menu-item-with-image a {
     background-repeat: no-repeat;
     background-position: left center;
-    /* background-size: cover; */
 }
 
 .menu-item a img {
     text-indent: 0;
-    /* display: block; */
+}
+.get-in-touch h2:after{
+    position: absolute;
+    content: '';
+    left :0;
+    bottom: -7px;
+    width: 50px;
+    height: 2px;
+    background-color: #fff;
 }
